--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "next": "16.0.7",
     "next-sanity": "^11.6.10",
     "react": "19.2.0",
