--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "next-sanity": "^11.6.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "sanity": "^4.20.3",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
