--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "next-sanity": "^11.6.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "sanity": "^4.20.3",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
-    "toaster": "^0.1.2"
+    "toaster": "^0.1.2",
+    "toastify-js": "^1.12.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
