--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
-    "next": "16.0.7",
+    "next": "16.0.10",
     "next-sanity": "^11.6.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -42,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "sanity": "^4.20.3",
+    "stripe": "^20.0.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
     "toaster": "^0.1.2",
